Spent almost all day fixing bug where navbar with positon: fixed caused it to cover part of the scrollbar. Originally, the <html> and <body> tag were arrested/frozen and did not scroll, and instead, a <div> with className=main was scrolling, in order to accomodate the parallax effect. Everything seemed to work fine except that when a sibling element to this main <div> (ie. the constructed fixed navbar) have position: fixed, they will appear on top of the main <div>'s scrollbar. The only way I could find to fix it was to eliminate the main <div>'s scrollbar and revert back to using the <html>/<body>/window's scroll bar -- element with position: fixed do not seem to sit on top of -that- scrollbar.

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -33,15 +33,11 @@ body {
 html {
   box-sizing: border-box;
   font-family: Kozuka Gothic Pr6N, Segoe UI, Arial, Verdana;
-  height: max-content;
-  overflow: hidden;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .main {  
-  box-sizing: border-box;
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
   perspective: 1px;
-  scroll-behavior: smooth;
 }
