--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -7,7 +7,7 @@ nav {
   width: 100%;
   &.nav-fixed {
     color: $tertiary-color;
-    position: absolute;
+    position: fixed;
     opacity: 1;
     z-index: 1;
     & .fixed {
@@ -21,11 +21,10 @@ nav {
 .scraps {
   & .scrap {
     color: $quarternary-color;
-    // color: white;
     font-weight: 600;
     mix-blend-mode: difference;
     padding: 0 1rem;
-    position: absolute;
+    position: fixed;
     z-index: 2;
     &.brand { font-size: 1.5rem; left: 5vw; top: 20vh; }
     & .brand-sub { display: block; font-size: 1rem; left: 1rem; position: relative; }
